--- a/home.html
+++ b/home.html
@@ -48,6 +48,7 @@
                   Honolulu es la más sureña de entre las principales ciudades estadounidenses. Aunque el nombre de Honolulu se refiere al área
                   urbana en la costa sureste de la isla de Oahu, la ciudad y condado de Honolulu han formado una ciudad-
                   condado consolidada que cubre toda la ciudad (aproximadamente 600 Km<sup>2</sup> de superficie).
+                  xxxxxxxxxxxxxxxxxxxxxxxxxxxx
                 </p>
                        
                 </div>
