--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
  html {
   min-height: 100%;
   position: relative;
+  margin: 0;
+     padding: 0;
 }
 body {
   margin: 0;
-  margin-bottom: 40px;
+     padding: 0;
+  
 }
 
 
