--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@ body {
   padding: 0;
 }
 
+footer {
+   
+    position: absolute;
+    bottom: 0;
+    
+}
 
 .embed-container {
     position: relative;
