--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ footer {
 
 .embed-container {
     position: relative;
-    padding-bottom: 56.25%;
+    
     height: 0;
     overflow: hidden;
 }
@@ -42,7 +42,7 @@ footer {
     left: 0;
     width: 100%;
     height: 100%;
-   
+    margin:0; padding:0;
 }
 
 </style>
