--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ footer {
 
 .embed-container {
     position: relative;
-    padding-top: 100%;
+    padding-bottom: 100%;
     height: 0;
     overflow: hidden;
 }
