--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@ body {
 }
 
 footer {
-   
-    position: absolute;
-    bottom: 0;
+  position: absolute;
+    left: 0;
+    right: 0;
     width: 100%;
-   
 }
 
 .embed-container {
