--- a/1roA.html
+++ b/1roA.html
@@ -3,7 +3,7 @@
                             <head>
                                 <meta charset='utf-8'>
                                 <meta name='viewport' content='width=device-width, initial-scale=1'>
-                                <title>3° Año "A"</title>
+                                <title>1° Año "A"</title>
                                 <link href='https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css' rel='stylesheet'>
                                 <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.css' rel='stylesheet'>
                                 <style></style>
@@ -19,13 +19,13 @@
     <div class="container">
         <div class="row">
             <div class="col-6">
-                <h3 class="mb-3">3° Año "A" </h3>
+                <h3 class="mb-3">1° Año "A" </h3>
             </div>
             <div class="col-6 text-right">
-                <a class="btn btn-info mb-3 mr-1" href="#carouselExampleIndicators2" role="button" data-slide="prev">
+                <a class="btn btn-warning mb-3 mr-1" href="#carouselExampleIndicators2" role="button" data-slide="prev">
                     <i class="fa fa-arrow-left"></i>
                 </a>
-                <a class="btn btn-info mb-3 " href="#carouselExampleIndicators2" role="button" data-slide="next">
+                <a class="btn btn-warning mb-3 " href="#carouselExampleIndicators2" role="button" data-slide="next">
                     <i class="fa fa-arrow-right"></i>
                 </a>
             </div>
@@ -37,32 +37,32 @@
                             <div class="row">
 
                                 <div class="col-md-4 mb-3">
-                                    <div class="card shadow p-3 mb-5 bg-info rounded">
-                                        <img class="img-fluid" alt="100%x280" src="3ro A/Dulce frío.jpg">
+                                    <div class="card shadow p-3 mb-5 bg-warning rounded">
+                                        <img class="img-fluid" alt="100%x280" src="1ro A/CARAMEL COOKIE 1A.jpg">
                                         <div class="card-body">
-                                            <h4 class="card-title">Dulce frío</h4>
-                                            <p class="card-text">Gelatinas y helados.</p>
+                                            <h4 class="card-title">Caramel Cookie</h4>
+                                            <p class="card-text">Alfajores de chocolate.</p>
 
                                         </div>
 
                                     </div>
                                 </div>
                                 <div class="col-md-4 mb-3">
-                                    <div class="card shadow p-3 mb-5 bg-info rounded">
-                                        <img class="img-fluid" alt="100%x280" src="3ro A/Enfruta2.png">
+                                    <div class="card shadow p-3 mb-5 bg-warning rounded">
+                                        <img class="img-fluid" alt="100%x280" src="1ro A/EXPOLEMON 1A.jpg">
                                         <div class="card-body">
-                                            <h4 class="card-title">Enfruta2</h4>
-                                            <p class="card-text">Ensalada de frutas.</p>
+                                            <h4 class="card-title">EXPOLEMON</h4>
+                                            <p class="card-text">Lemon pie.</p>
 
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-md-4 mb-3">
-                                    <div class="card shadow p-3 mb-5 bg-info rounded">
-                                        <img class="img-fluid" alt="100%x280" src="3ro A/Goal King.png">
+                                    <div class="card shadow p-3 mb-5 bg-warning rounded">
+                                        <img class="img-fluid" alt="100%x280" src="1ro A/Los gordis pastelitos 1A.jpg">
                                         <div class="card-body">
-                                            <h4 class="card-title">Goal King</h4>
-                                            <p class="card-text">Licuados.</p>
+                                            <h4 class="card-title">Los gordis</h4>
+                                            <p class="card-text">Pastelitos.</p>
 
                                         </div>
                                     </div>
@@ -75,32 +75,32 @@
                             <div class="row">
 
                                 <div class="col-md-4 mb-3">
-                                    <div class="card shadow p-3 mb-5 bg-info rounded">
-                                        <img class="img-fluid" alt="100%x280" src="3ro A/HotDog El campeón.png">
+                                    <div class="card shadow p-3 mb-5 bg-warning rounded">
+                                        <img class="img-fluid" alt="100%x280" src="1ro A/Mi dulce alfajor 1A.jpg">
                                         <div class="card-body">
-                                            <h4 class="card-title">HotDog El campeón</h4>
-                                            <p class="card-text">Panchos especiales.</p>
+                                            <h4 class="card-title">Mi dulce alfajor</h4>
+                                            <p class="card-text">Alfajores de maizena.</p>
 
                                         </div>
 
                                     </div>
                                 </div>
                                 <div class="col-md-4 mb-3">
-                                    <div class="card shadow p-3 mb-5 bg-info rounded">
-                                        <img class="img-fluid" alt="100%x280" src="3ro A/Los exprimidores del éxito.png">
+                                    <div class="card shadow p-3 mb-5 bg-warning rounded">
+                                        <img class="img-fluid" alt="100%x280" src="1ro A/Chocopop 1A.jpg">
                                         <div class="card-body">
-                                            <h4 class="card-title">Los exprimidores del éxito</h4>
-                                            <p class="card-text">Jugos y limonadas.</p>
+                                            <h4 class="card-title">Chocopop</h4>
+                                            <p class="card-text">Chocotortas.</p>
 
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-md-4 mb-3">
-                                    <div class="card shadow p-3 mb-5 bg-info rounded">
-                                        <img class="img-fluid" alt="100%x280" src="3ro A/Rincón delsabor 3A.bmp">
+                                    <div class="card shadow p-3 mb-5 bg-warning rounded">
+                                        <img class="img-fluid" alt="100%x280" src="2do B/Napoletana per tutti.jpg">
                                         <div class="card-body">
-                                            <h4 class="card-title">Rincón delsabor</h4>
-                                            <p class="card-text">Pebetes artesanales.</p>
+                                            <h4 class="card-title">Napoletana per tutti</h4>
+                                            <p class="card-text">Pizzas especiales.</p>
 
                                         </div>
                                     </div>
