--- a/2doA.html
+++ b/2doA.html
@@ -3,7 +3,7 @@
                             <head>
                                 <meta charset='utf-8'>
                                 <meta name='viewport' content='width=device-width, initial-scale=1'>
-                                <title>2° Año "B"</title>
+                                <title>2° Año "A"</title>
                                 <link href='https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css' rel='stylesheet'>
                                 <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.css' rel='stylesheet'>
                                 <style></style>
@@ -41,7 +41,7 @@
                                         <img class="img-fluid" alt="100%x280" src="2do A/El Hornito Cordobe'.jpg">
                                         <div class="card-body">
                                             <h4 class="card-title">El Hornito Cordobe'</h4>
-                                            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                            <p class="card-text">Pizzas especiales.</p>
 
                                         </div>
 
@@ -52,7 +52,7 @@
                                         <img class="img-fluid" alt="100%x280" src="2do A/Empafritis.jpg">
                                         <div class="card-body">
                                             <h4 class="card-title">Empafritis</h4>
-                                            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                            <p class="card-text">Empanadas saladas.</p>
 
                                         </div>
                                     </div>
@@ -62,7 +62,7 @@
                                         <img class="img-fluid" alt="100%x280" src="2do A/Logo Pizza Planeta.png">
                                         <div class="card-body">
                                             <h4 class="card-title">Pizza Planeta</h4>
-                                            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                            <p class="card-text">Pizzas especiales.</p>
 
                                         </div>
                                     </div>
@@ -76,10 +76,10 @@
 
                                 <div class="col-md-4 mb-3">
                                     <div class="card shadow p-3 mb-5 bg-primary rounded">
-                                        <img class="img-fluid" alt="100%x280" src="2do A/">
+                                        <img class="img-fluid" alt="100%x280" src="2do A/EMPARICAS 2A.jpg">
                                         <div class="card-body">
-                                            <h4 class="card-title">Las delicias de Pachorra</h4>
-                                            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                            <h4 class="card-title">Emparicas</h4>
+                                            <p class="card-text">Empanadas.</p>
 
                                         </div>
 
@@ -87,10 +87,10 @@
                                 </div>
                                 <div class="col-md-4 mb-3">
                                     <div class="card shadow p-3 mb-5 bg-primary rounded">
-                                        <img class="img-fluid" alt="100%x280" src="2do A/">
+                                        <img class="img-fluid" alt="100%x280" src="2do A/Empanaderas 2A.jpg">
                                         <div class="card-body">
-                                            <h4 class="card-title">Las Pattys</h4>
-                                            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                            <h4 class="card-title">Empanaderas</h4>
+                                            <p class="card-text">Empanadas.</p>
 
                                         </div>
                                     </div>
