--- a/3roB.html
+++ b/3roB.html
@@ -41,7 +41,7 @@
                                         <img class="img-fluid" alt="100%x280" src="3ro B/Bulldogs.jpg">
                                         <div class="card-body">
                                             <h4 class="card-title">Bulldogs</h4>
-                                            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                            <p class="card-text">Gelatinas y helados.</p>
 
                                         </div>
 
@@ -52,7 +52,7 @@
                                         <img class="img-fluid" alt="100%x280" src="3ro B/Cerdis Juice´s.png">
                                         <div class="card-body">
                                             <h4 class="card-title">Cerdis Juice´s</h4>
-                                            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                            <p class="card-text">Jugos y limonadas.</p>
 
                                         </div>
                                     </div>
@@ -62,7 +62,7 @@
                                         <img class="img-fluid" alt="100%x280" src="3ro B/Fruti Shop.png">
                                         <div class="card-body">
                                             <h4 class="card-title">Fruti Shop</h4>
-                                            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                            <p class="card-text">Ensalada de frutas.</p>
 
                                         </div>
                                     </div>
@@ -79,7 +79,7 @@
                                         <img class="img-fluid" alt="100%x280" src="3ro B/Licuados Chiquito Romero.bmp">
                                         <div class="card-body">
                                             <h4 class="card-title">Licuados Chiquito Romero</h4>
-                                            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                            <p class="card-text">Licuados.</p>
 
                                         </div>
 
@@ -90,7 +90,7 @@
                                         <img class="img-fluid" alt="100%x280" src="3ro B/Panchos Swift.jpg">
                                         <div class="card-body">
                                             <h4 class="card-title">Panchos Swift</h4>
-                                            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                            <p class="card-text">Panchos especiales.</p>
 
                                         </div>
                                     </div>
@@ -100,7 +100,7 @@
                                         <img class="img-fluid" alt="100%x280" src="3ro B/PBT.png">
                                         <div class="card-body">
                                             <h4 class="card-title">PBT</h4>
-                                            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                            <p class="card-text">Pebetes.</p>
 
                                         </div>
                                     </div>
