--- a/2doA.html
+++ b/2doA.html
@@ -99,8 +99,8 @@
                                     <div class="card shadow p-3 mb-5 bg-primary rounded">
                                         <img class="img-fluid" alt="100%x280" src="2do A/mia 2doA.png">
                                         <div class="card-body">
-                                            <h4 class="card-title">Napoletana per tutti</h4>
-                                            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                            <h4 class="card-title">Más de una delicia</h4>
+                                            <p class="card-text">Empanadas.</p>
 
                                         </div>
                                     </div>
