act logo Dulzura

--- a/1roB.html
+++ b/1roB.html
@@ -87,10 +87,10 @@
                                 </div>
                                 <div class="col-md-4 mb-3">
                                     <div class="card shadow p-3 mb-5 bg-warning rounded">
-                                        <img class="img-fluid" alt="100%x280" src="2do B/Las Pattys.jpg">
+                                        <img class="img-fluid" alt="100%x280" src="1ro B/Dulzura Alfajores de maizena.jpg">
                                         <div class="card-body">
-                                            <h4 class="card-title">Las Pattys</h4>
-                                            <p class="card-text">Empanadas Árabes.</p>
+                                            <h4 class="card-title">Dulzura</h4>
+                                            <p class="card-text">Alfajores de maicena.</p>
 
                                         </div>
                                     </div>
