cargue logo dulzura1

--- a/1roA.html
+++ b/1roA.html
@@ -79,7 +79,7 @@
                                         <img class="img-fluid" alt="100%x280" src="1ro A/Mi dulce alfajor 1A.jpg">
                                         <div class="card-body">
                                             <h4 class="card-title">Mi dulce alfajor</h4>
-                                            <p class="card-text">Alfajores de maizena.</p>
+                                            <p class="card-text">Alfajores de maicena.</p>
 
                                         </div>
 
