act logo pickle

--- a/4toA.html
+++ b/4toA.html
@@ -3,7 +3,7 @@
                             <head>
                                 <meta charset='utf-8'>
                                 <meta name='viewport' content='width=device-width, initial-scale=1'>
-                                <title>2° Año "B"</title>
+                                <title>4° Año "A"</title>
                                 <link href='https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css' rel='stylesheet'>
                                 <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.css' rel='stylesheet'>
                                 <style></style>
@@ -19,7 +19,7 @@
     <div class="container">
         <div class="row">
             <div class="col-6">
-                <h3 class="mb-3">2° Año "B" </h3>
+                <h3 class="mb-3">4° Año "A" </h3>
             </div>
             <div class="col-6 text-right">
                 <a class="btn btn-warning mb-3 mr-1" href="#carouselExampleIndicators2" role="button" data-slide="prev">
@@ -38,10 +38,10 @@
 
                                 <div class="col-md-4 mb-3">
                                     <div class="card shadow p-3 mb-5 bg-warning rounded">
-                                        <img class="img-fluid" alt="100%x280" src="2do B/Chicken Little.jpg">
+                                        <img class="img-fluid" alt="100%x280" src="4to A/PickletMania 4toA.jpg">
                                         <div class="card-body">
-                                            <h4 class="card-title">Chicken Little</h4>
-                                            <p class="card-text">Empanadas de pollo.</p>
+                                            <h4 class="card-title">Picklemania</h4>
+                                            <p class="card-text">Pickles.</p>
 
                                         </div>
 
