cargue logo delicias futales

--- a/4toA.html
+++ b/4toA.html
@@ -49,10 +49,10 @@
                                 </div>
                                 <div class="col-md-4 mb-3">
                                     <div class="card shadow p-3 mb-5 bg-warning rounded">
-                                        <img class="img-fluid" alt="100%x280" src="2do B/El Octavo.png">
+                                        <img class="img-fluid" alt="100%x280" src="4to A/Delicias Frutales 4A.jpg">
                                         <div class="card-body">
-                                            <h4 class="card-title">El Octavo</h4>
-                                            <p class="card-text">Pizzas especiales.</p>
+                                            <h4 class="card-title">Delicias frutales</h4>
+                                            <p class="card-text">...</p>
 
                                         </div>
                                     </div>
