--- a/index.html
+++ b/index.html
@@ -29,12 +29,19 @@ body {
     overflow: hidden;
 }
 .embed-container iframe {
-    position: absolute;
+  /* 
+  position: absolute;
     top:0;
     left: 0;
     width: 100%;
     height: 100%;
-   
+   */
+   position: absolute;
+   width: 100vw !important;
+   height: 100vh !important;
+   padding: 0 !important;
+   margin: 0 !important;
+   overflow:hidden;
 }
 
 #footer {
