--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@ body {
 }
 
 .embed-container {
-    position: relative;
-    padding-bottom: 90%;
-    height: 0;
+  position: relative;
     overflow: hidden;
+    padding-bottom: 180%; /* 500 (height) / 1500 (Width) =0.333=33.333% */
+    height: 0;
 }
 .embed-container iframe {
   /* 
