--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@ body {
     height: 100%;
    */
    position: absolute;
-   width: 100vw !important;
-   height: 100vh !important;
+   width: 100% !important;
+   height: 100% !important;
    padding: 0 !important;
    margin: 0 !important;
    overflow:hidden;
