--- a/index.html
+++ b/index.html
@@ -25,23 +25,18 @@ body {
 .embed-container {
   position: relative;
     overflow: hidden;
-    padding-bottom: 180%; /* 500 (height) / 1500 (Width) =0.333=33.333% */
+    padding-bottom: 90%; /* 500 (height) / 1500 (Width) =0.333=33.333% */
     height: 0;
 }
 .embed-container iframe {
-  /* 
+   
   position: absolute;
     top:0;
     left: 0;
     width: 100%;
     height: 100%;
-   */
-   position: absolute;
-   width: 100% !important;
-   height: 100% !important;
-   padding: 0 !important;
-   margin: 0 !important;
-   overflow:hidden;
+    margin: 0; /*cambio*/
+  padding: 0; /*cambio*/
 }
 
 #footer {
