--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
 body {
   margin: 0;
   padding: 0;
+  height:100%; /* agregue */
 }
 
 .embed-container {
   position: relative;
     overflow: hidden;
-    padding-bottom: 50%; /* 500 (height) / 1500 (Width) =0.333=33.333% */
+    padding-bottom: 80%; /* 500 (height) / 1500 (Width) =0.333=33.333% */
     height: 0;
 }
 .embed-container iframe {
