--- a/4toA.html
+++ b/4toA.html
@@ -52,17 +52,17 @@
                                         <img class="img-fluid" alt="100%x280" src="4to A/Delicias Frutales 4A.jpg">
                                         <div class="card-body">
                                             <h4 class="card-title">Delicias frutales</h4>
-                                            <p class="card-text">...</p>
+                                            <p class="card-text">Mermeladas</p>
 
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-md-4 mb-3">
                                     <div class="card shadow p-3 mb-5 bg-warning rounded">
-                                        <img class="img-fluid" alt="100%x280" src="2do B/Empalumpas.jpg">
+                                        <img class="img-fluid" alt="100%x280" src="4to A/El rincon del escabeche 4a.png">
                                         <div class="card-body">
-                                            <h4 class="card-title">Empalumpas</h4>
-                                            <p class="card-text">Empanadas de jamón y queso.</p>
+                                            <h4 class="card-title">El rincon del escabeche</h4>
+                                            <p class="card-text">Escabeche de verduras.</p>
 
                                         </div>
                                     </div>
@@ -76,10 +76,10 @@
 
                                 <div class="col-md-4 mb-3">
                                     <div class="card shadow p-3 mb-5 bg-warning rounded">
-                                        <img class="img-fluid" alt="100%x280" src="2do B/Las delicias de Pachorra.jpg">
+                                        <img class="img-fluid" alt="100%x280" src="4to A/lengua al gusto lengua a la vinagreta 4a.png">
                                         <div class="card-body">
-                                            <h4 class="card-title">Las delicias de Pachorra</h4>
-                                            <p class="card-text">Empanadas saladas.</p>
+                                            <h4 class="card-title">Lengua al gusto</h4>
+                                            <p class="card-text">Lengua a la vinagreta.</p>
 
                                         </div>
 
@@ -87,17 +87,17 @@
                                 </div>
                                 <div class="col-md-4 mb-3">
                                     <div class="card shadow p-3 mb-5 bg-warning rounded">
-                                        <img class="img-fluid" alt="100%x280" src="2do B/Las Pattys.jpg">
+                                        <img class="img-fluid" alt="100%x280" src="4to A/Bien de campo 4A.JPG">
                                         <div class="card-body">
-                                            <h4 class="card-title">Las Pattys</h4>
-                                            <p class="card-text">Empanadas Árabes.</p>
+                                            <h4 class="card-title">Bien de campo</h4>
+                                            <p class="card-text">Escabeche de pollo.</p>
 
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-md-4 mb-3">
                                     <div class="card shadow p-3 mb-5 bg-warning rounded">
-                                        <img class="img-fluid" alt="100%x280" src="2do B/Napoletana per tutti.jpg">
+                                        <img class="img-fluid" alt="100%x280" src="4to A/">
                                         <div class="card-body">
                                             <h4 class="card-title">Napoletana per tutti</h4>
                                             <p class="card-text">Pizzas especiales.</p>
