agregue la 7ma card

--- a/4toA.html
+++ b/4toA.html
@@ -97,10 +97,10 @@
                                 </div>
                                 <div class="col-md-4 mb-3">
                                     <div class="card shadow p-3 mb-5 bg-warning rounded">
-                                        <img class="img-fluid" alt="100%x280" src="4to A/">
+                                        <img class="img-fluid" alt="100%x280" src="4to A/La tomatera salsas de tomate 4a.png">
                                         <div class="card-body">
-                                            <h4 class="card-title">Napoletana per tutti</h4>
-                                            <p class="card-text">Pizzas especiales.</p>
+                                            <h4 class="card-title">La tomatera</h4>
+                                            <p class="card-text">Salsas de tomate.</p>
 
                                         </div>
                                     </div>
@@ -108,6 +108,30 @@
 
                             </div>
                         </div>
+
+
+
+                        <div class="carousel-item">
+                            <div class="row">
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card shadow p-3 mb-5 bg-warning rounded">
+                                        <img class="img-fluid" alt="100%x280" src="4to A/Delicia dulce de leche 4a.jpg">
+                                        <div class="card-body">
+                                            <h4 class="card-title">Delicia</h4>
+                                            <p class="card-text">Dulce de leche.</p>
+
+                                        </div>
+
+                                    </div>
+                                </div>
+                               
+                            </div>
+                        </div>
+
+
+
+
                     </div>
                 </div>
             </div>
