--- a/1roB.html
+++ b/1roB.html
@@ -97,10 +97,10 @@
                                 </div>
                                 <div class="col-md-4 mb-3">
                                     <div class="card shadow p-3 mb-5 bg-warning rounded">
-                                        <img class="img-fluid" alt="100%x280" src="2do B/Napoletana per tutti.jpg">
+                                        <img class="img-fluid" alt="100%x280" src="1ro B/Softlemon 1B.jpg">
                                         <div class="card-body">
-                                            <h4 class="card-title">Napoletana per tutti</h4>
-                                            <p class="card-text">Pizzas especiales.</p>
+                                            <h4 class="card-title">Softlemon</h4>
+                                            <p class="card-text">Lemom pie.</p>
 
                                         </div>
                                     </div>
