--- a/2doA.html
+++ b/2doA.html
@@ -79,7 +79,7 @@
                                         <img class="img-fluid" alt="100%x280" src="2do A/EMPARICAS 2A.jpg">
                                         <div class="card-body">
                                             <h4 class="card-title">Emparicas</h4>
-                                            <p class="card-text">Empanadas.</p>
+                                            <p class="card-text">Empanadas de pollo.</p>
 
                                         </div>
 
@@ -90,7 +90,7 @@
                                         <img class="img-fluid" alt="100%x280" src="2do A/Empanaderas 2A.jpg">
                                         <div class="card-body">
                                             <h4 class="card-title">Empanaderas</h4>
-                                            <p class="card-text">Empanadas.</p>
+                                            <p class="card-text">Empanadas dejamón y queso.</p>
 
                                         </div>
                                     </div>
@@ -100,7 +100,7 @@
                                         <img class="img-fluid" alt="100%x280" src="2do A/mia 2doA.png">
                                         <div class="card-body">
                                             <h4 class="card-title">Más de una delicia</h4>
-                                            <p class="card-text">Empanadas.</p>
+                                            <p class="card-text">Empanadas árabes.</p>
 
                                         </div>
                                     </div>
