--- a/1roB.html
+++ b/1roB.html
@@ -62,7 +62,7 @@
                                         <img class="img-fluid" alt="100%x280" src="1ro B/La locura del sabor 1B.jpg">
                                         <div class="card-body">
                                             <h4 class="card-title">La locura del sabor</h4>
-                                            <p class="card-text">...</p>
+                                            <p class="card-text">Chocotorta</p>
 
                                         </div>
                                     </div>
@@ -100,7 +100,7 @@
                                         <img class="img-fluid" alt="100%x280" src="1ro B/Softlemon 1B.jpg">
                                         <div class="card-body">
                                             <h4 class="card-title">Softlemon</h4>
-                                            <p class="card-text">Lemom pie.</p>
+                                            <p class="card-text">Lemon pie.</p>
 
                                         </div>
                                     </div>
