--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@ body {
                 <a class="nav-link" id="home" href="home.html" target="myFrame">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">Historia</a>
+                <a class="nav-link" href="ubicacion.html" target="myFrame">Como llegar</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="ubicacion.html" target="myFrame">Ubicación</a>
+                <a class="nav-link" href="">Participá</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
