--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@ body {
                 <a class="nav-link" id="home" href="home.html" target="myFrame">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="ubicacion.html" target="myFrame">Como llegar</a>
+                <a class="nav-link" href="ubicacion.html" target="myFrame">Cómo llegar</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="formulario.html" target="myFrame">Participá</a>
+                <a class="nav-link" href="formulario.html" target="myFrame">Dejanos tu comentario</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
