--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ body {
                 <a class="nav-link" href="ubicacion.html" target="myFrame">Cómo llegar</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="formulario.html" target="myFrame">Dejanos tu comentario</a>
+                <a class="nav-link" href="formulario.html" target="myFrame">Déjanos un comentario</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
