--- a/4toB.html
+++ b/4toB.html
@@ -41,7 +41,7 @@
                                         <img class="img-fluid" alt="100%x280" src="4to B/NUTRIVIDA.png">
                                         <div class="card-body">
                                             <h4 class="card-title">Nutrivida</h4>
-                                            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                            <p class="card-text">Pizzetas y pan de anís.</p>
 
                                         </div>
 
@@ -52,7 +52,7 @@
                                         <img class="img-fluid" alt="100%x280" src="4to B/SABORES SIN LACTOSA.jpg">
                                         <div class="card-body">
                                             <h4 class="card-title">Sabores sin lactosa</h4>
-                                            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                            <p class="card-text">Licuados y panqueques.</p>
 
                                         </div>
                                     </div>
@@ -62,7 +62,7 @@
                                         <img class="img-fluid" alt="100%x280" src="4to B/SALUD Y FRUTA.jpeg">
                                         <div class="card-body">
                                             <h4 class="card-title">Salud y Fruta</h4>
-                                            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                            <p class="card-text">Limonadas, brochetas de frutas y shot de yogurt y granola.</p>
 
                                         </div>
                                     </div>
@@ -79,7 +79,7 @@
                                         <img class="img-fluid" alt="100%x280" src="4to B/VIDA EN FORMA.jpg">
                                         <div class="card-body">
                                             <h4 class="card-title">Vida en forma</h4>
-                                            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                            <p class="card-text">Brownie sin gluten galletas de avena y jugo de naranja.</p>
 
                                         </div>
 
@@ -87,24 +87,15 @@
                                 </div>
                                 <div class="col-md-4 mb-3">
                                     <div class="card shadow p-3 mb-5 bg-success rounded">
-                                        <img class="img-fluid" alt="100%x280" src="4to B/">
+                                        <img class="img-fluid" alt="100%x280" src="4to B/Tropical 4B.jpg">
                                         <div class="card-body">
-                                            <h4 class="card-title">Panchos Swift</h4>
-                                            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                            <h4 class="card-title">Tropical</h4>
+                                            <p class="card-text">Budines y smoothie.</p>
 
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-md-4 mb-3">
-                                    <div class="card shadow p-3 mb-5 bg-success rounded">
-                                        <img class="img-fluid" alt="100%x280" src="4to B/">
-                                        <div class="card-body">
-                                            <h4 class="card-title">PBT</h4>
-                                            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-
-                                        </div>
-                                    </div>
-                                </div>
+                                
 
                             </div>
                         </div>
