--- a/4toA.html
+++ b/4toA.html
@@ -61,7 +61,7 @@
                                     <div class="card shadow p-3 mb-5 bg-warning rounded">
                                         <img class="img-fluid" alt="100%x280" src="4to A/El rincon del escabeche 4a.png">
                                         <div class="card-body">
-                                            <h4 class="card-title">El rincon del escabeche</h4>
+                                            <h4 class="card-title">El rincón del escabeche</h4>
                                             <p class="card-text">Escabeche de verduras.</p>
 
                                         </div>
