--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ body {
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="imagenes/c1.png" class="d-block w-100" alt="...">
+            <img src="imagenes/c1.bmp" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5></h5>
               <p></p>
