--- a/index.html
+++ b/index.html
@@ -25,18 +25,21 @@ body {
 
 .embed-container {
   position: relative;
-    overflow: hidden;
-    padding-bottom: 80%; /* 500 (height) / 1500 (Width) =0.333=33.333% */
-    height: 0;
+  width: 100%;
+  overflow: hidden;
+  padding-top: 56.25%; /* 16:9 Aspect Ratio */
 }
 .embed-container iframe {
    
-  position: absolute;
-    top:0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display:block; /* agregue */
+     
+    position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
    
 }
 
