--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ body {
 .embed-container iframe {
    
      
-    position: absolute;
+    position: relative;
   top: 0;
   left: 0;
   bottom: 0;
