--- a/index.html
+++ b/index.html
@@ -30,16 +30,11 @@ body {
   padding-top: 56.25%; /* 16:9 Aspect Ratio */
 }
 .embed-container iframe {
-   
-     
-    position: relative;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-  border: none;
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
    
 }
 
