--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@ body {
 }
 
 .embed-container {
-  position: relative;
-  width: 100%;
-  overflow: hidden;
-  padding-top: 56.25%; /* 16:9 Aspect Ratio */
+    position: relative;
+    padding-bottom: 56,25%;
+    height: 0;
+    overflow: hidden;
 }
 .embed-container iframe {
     position: absolute;
