--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body {
 
 .embed-container {
     position: relative;
-    padding-bottom: 60%;
+    padding-top: 56,25%;
     height: 0;
     overflow: hidden;
 }
