--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <link rel="shortcut icon" href="imagenes/Logo-IPMC.png">
 
 <style>
-html, body {margin:0; padding:0;height: 100%;}
+html{margin:0; padding:0;height: 100%;}
+   body {margin:0; padding:0;height: 100%;min-height:100vh}
         form, iframe { margin:0; padding:0; height:100%; width:100%; display:block;border:none; background-color: aqua; }
     
 
