--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@ html{margin:0; padding:0;height: 100%;}
    body {margin:0; padding:0;height: 100%;min-height: 100vh;
   
   display: flex;
-  flex-direction: column;}
-        form, iframe { margin:0; padding:0; height:100%; width:100%; display:block;border:none; background-color: aqua; }
+ }
+        form, iframe { margin:0; padding:0; height:100%; width:100%; display:block;border:none }
     
 
 .footer {
