--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <style>
 html{margin:0; padding:0;height: 100%;}
-   body {margin:0; padding:0;height: 100%;min-height: 100vh; }
+   body {margin:0; padding:0;min-height: 100vh; }
         form, iframe { margin:0; padding:0; height:100%; width:100%; display:block;border:none }
     
 
