--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@ form, iframe { margin:0; padding:0; height:100%; width:100%; display:block;borde
     <div class="text-center p-4" >
     © 2023 Copyright:
     <a style="text-decoration: none" class="text-reset fw-bold" href="">Ramos, Juan Carlos</a>
+        <p>Instituto Parroquial Monte Cristo</p>
     </div>
 </footer>
     
